@@ -1,3 +1,4 @@
+2018-01-19 Version 1.61.0: Fixed a bug handling more than one OCSP host
 2017-12-15 Version 1.60.0: Fixed a bug related to XMPP introduced in the last version
 2017-12-14 Version 1.59.0: Added an option to specify the 'to' attribute of the XMPP stream element
 2017-11-29 Version 1.58.0: Support for DER encoded CRL files
