@@ -1,3 +1,7 @@
+2018-01-19  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert: Fixed a bug processing more than one OCSP host
+
 2017-12-15  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert: Fixed a bug in the specification of the xmpphost parameter
